if (WIN32)
	add_library(SDL2main STATIC IMPORTED GLOBAL)
	set_target_properties(SDL2main PROPERTIES
		IMPORTED_LOCATION "${CMAKE_CURRENT_LIST_DIR}/SDL2-2.0.20/lib/x64/SDL2main.lib"
		IMPORTED_IMPLIB "${CMAKE_CURRENT_LIST_DIR}/SDL2-2.0.20/lib/x64/SDL2main.lib"
	)

	add_library(SDL2 SHARED IMPORTED GLOBAL)
	set_target_properties(SDL2 PROPERTIES
		IMPORTED_LOCATION "${CMAKE_CURRENT_LIST_DIR}/SDL2-2.0.20/lib/x64/SDL2.dll"
		IMPORTED_IMPLIB "${CMAKE_CURRENT_LIST_DIR}/SDL2-2.0.20/lib/x64/SDL2.lib"
		INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_LIST_DIR}/SDL2-2.0.20/include"
	)
	target_link_libraries(SDL2 INTERFACE SDL2main)
else()

endif()
