if (WIN32)
	add_library(SDL2main STATIC IMPORTED GLOBAL)
	set_target_properties(SDL2main PROPERTIES
		IMPORTED_LOCATION "${CMAKE_CURRENT_LIST_DIR}/SDL2-2.0.20/lib/x64/SDL2main.lib"
		IMPORTED_IMPLIB "${CMAKE_CURRENT_LIST_DIR}/SDL2-2.0.20/lib/x64/SDL2main.lib"
	)

	add_library(SDL2 SHARED IMPORTED GLOBAL)
	set_target_properties(SDL2 PROPERTIES
		IMPORTED_LOCATION "${CMAKE_CURRENT_LIST_DIR}/SDL2-2.0.20/lib/x64/SDL2.dll"
		IMPORTED_IMPLIB "${CMAKE_CURRENT_LIST_DIR}/SDL2-2.0.20/lib/x64/SDL2.lib"
		INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_LIST_DIR}/SDL2-2.0.20/include"
	)
	target_link_libraries(SDL2 INTERFACE SDL2main)
else()
	include(ExternalProject)
	ExternalProject_Add(
		libSDL2
		URL ${CMAKE_CURRENT_LIST_DIR}/SDL2-2.0.20.zip
		CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${CMAKE_CURRENT_BINARY_DIR} -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
		BUILD_COMMAND make -j${PROCESSOR_COUNT}
	)
endif()
